--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div id="header">
-            <h1>Today is Quiver's Birthday 🎉</h1>
+            <h1>Today is Quiver's Birthday !!🎉</h1>
             <img src="images/img_avatar.png" id="bd-img" />
             <h2 id="bday-age">8 years old</h2>
             <h4 id="bday-date">23.10.2023</h4>
